--- a/apps/auth/templates/auth/signup.html
+++ b/apps/auth/templates/auth/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="relative flex h-[600px] bg-gray-100">
 
-<div class="absolute inset-0 flex items-center justify-end pr-24">
+<div class="absolute inset-0 flex items-center justify-center">
     <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
       <h2 class="text-2xl font-bold mb-6 text-center">회원가입</h2>
             <form action="{{ url_for('auth.signup', next=request.args.get('next')) }}"
