--- a/apps/auth/templates/auth/support.html
+++ b/apps/auth/templates/auth/support.html
@@ -2,9 +2,8 @@
   {% block content %}
 
   <div class="relative flex h-[600px] bg-gray-100">
-
-    <div class="absolute inset-0 flex items-center justify-end pr-24">
-      <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
+    <div class="absolute inset-0 flex items-center justify-center">
+      <div class="w-96 p-8 bg-white rounded-lg shadow-lg" style="overflow-y: auto; max-height: 580px;">
         <h2 class="text-2xl font-bold mb-6 text-center">1:1 문의</h2>
 
 {% with messages =
@@ -78,7 +77,7 @@
             name="text"
             value="{{ form.text.data or ''}}"
             placeholder="문의 사항"
-            style="height: 200px;"
+            style="height: 180px;"
           ></textarea>
           {% if form.text.errors %}
           <div class="invalid-feedback">{{ form.text.errors[0] }}</div>
