--- a/apps/auth/templates/auth/info.html
+++ b/apps/auth/templates/auth/info.html
@@ -4,7 +4,7 @@
 
 <div class="relative flex h-[600px] bg-gray-100">
 
-<div class="absolute inset-0 flex items-center justify-end pr-24">
+<div class="absolute inset-0 flex items-center justify-center">
   <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
     <h2 class="text-2xl font-bold text-center">회원 정보</h2>
     
@@ -17,6 +17,9 @@
       </svg>
       </a>
     </div>
+    {% for message in get_flashed_messages() %}
+      <span class="dt-auth-flashh">{{ message }}</span>
+    {% endfor %}
     
       <div class="form-floating">
         <input class="form-control dt-auth-input w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" type="text"  value="{{ current_user.user_name }}" disabled>
