--- a/apps/server/static/css/style.css
+++ b/apps/server/static/css/style.css
@@ -1,5 +1,28 @@
+
+.bg_video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+  }
+  
+  .bg_video video {
+    position: absolute;
+    top: 43%;
+    left: 51%;
+    min-width: 100%;
+    min-height: 100%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    filter: blur(8px);
+  }
+  
 body {
-    background-color: #f5f5f5;
+    background: linear-gradient(135deg, #f2f4f8, #dae2ea);
+    
 }
 h4 {
     margin-top: 20px;
@@ -35,6 +58,10 @@ input[type="search"] {
 }
 .dt-auth-flash {
     font-size: 14px;
+    color: #bf3644;
+}
+.dt-auth-flashh {
+    font-size: 13px;
     color: #bf3644;
 }
 .register-flash {
