--- a/apps/auth/templates/auth/find_password.html
+++ b/apps/auth/templates/auth/find_password.html
@@ -2,7 +2,13 @@
 {% block title %}비밀번호 찾기{% endblock %}
 {% block content %}
 
-<div class="relative flex h-[600px] bg-gray-100">
+<div class="relative flex h-[600px]">
+    <div class="bg_video">
+        <video autoplay muted loop playsinline>
+          <source src="{{ url_for('static', filename='../static/images/식물3.mp4') }}" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
     <div class="absolute inset-0 flex items-center justify-center">
         <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
             <h2 class="text-2xl font-bold mb-6 text-center">비밀번호 찾기</h2>
