--- a/apps/auth/templates/auth/modify_pw.html
+++ b/apps/auth/templates/auth/modify_pw.html
@@ -1,7 +1,13 @@
 {% extends "server/base.html" %}
   {% block content %}
 
-  <div class="relative flex h-[600px] bg-gray-100">
+  <div class="relative flex h-[600px]">
+    <div class="bg_video">
+        <video autoplay muted loop playsinline>
+          <source src="{{ url_for('static', filename='../static/images/식물3.mp4') }}" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
 
     <div class="absolute inset-0 flex items-center justify-center">
       <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
