영상 보관소 검색창 bg 색 뜨는 것 개선

--- a/apps/server/static/css/style.css
+++ b/apps/server/static/css/style.css
@@ -253,13 +253,16 @@ label::after {
 }
 
 #search {
-    background-color: #f9fafb;
+    background-color: #f2f4f800;
     border-top-right-radius: 0% !important;
     border-bottom-right-radius: 0% !important;
 }
 #search-box {
     padding: 0% !important;
     width: fit-content;
+}
+.datepicker{
+    background-color: #f2f4f800;
 }
 #search-box:focus {
     border: #0569a1 !important;
